  issues in email clients such as gmail.

* Implementation of email gateway in bin/codestriker-email-gateway.pl,
  which allows for comments to be added to a topic by simply replying
  to an email.

* Added support for creating Perforce topics given the path (module_name),
  and either two labels or changelists for the start/end tag fields,
  from Arun Jose <josea111@users.sourceforge.net>.
	
Version 1.9.9

* Removed incompatible setting from MySQL database driver, which was
  preventing it from working with MySQL 5.1 or later.

* Fixed regression where selecting state "All" from the search topics
  screen would only return "Open" topics.
	
Version 1.9.8

* Fixed issue where using Internet Explorer with a Codestriker
  deployment with authentication enabled would prevent new comments
  from being added.

Version 1.9.7

* Introduced basic user authentication / authorisation into the
  system.  If the $admin_users configuration variable is specified
  in codestriker.conf, this contains a list of "admin" users.
  If defined, admin users are the only ones who can
  create/edit/delete projects.
	
* Created another Subversion post-commit script which is an extension
  of the standard commit-email.pl script which ships with Subversion.
  The email sent also includes an additional line, which is the URL to
  the auto-created topic.
  
* Updated install.pl so that it can be executed from any directory, not
  just bin.
  
* Creating Perforce topics directly from already committed files in the
  depot did not work if the depot was on a different machine to the
  web-server.  This has now been fixed.
  
* Fixed an issue where some Perforce describe diffs were not being
  parsed correctly as reported by shambhu.1980@gmail.com.  This has
  now been fixed.  
  
* Added a drop-down on the topic create page where the initial topic
  state can be set.  By default, this is set to "Open", however in
  situations where a review has already been performed but needs to